Add menu and icon on tree view

--- a/FileMange/MainForm.resx
+++ b/FileMange/MainForm.resx
@@ -141,15 +141,15 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIuSURBVDhPvZFdSFNxGMbflKALoS666Cbo1iAo8iovCqIu
-        yqsupIs+iBKhLGcF0qgdnM1anzO8iD6YpqZsRtuwffQhhyyzqWSzi/xYqzkdjbazldt0O+3p3TrBgRp0
-        Uw+8HM553t/v/A+H/ltGW+mxp4XgOk94pCf0NNBdpfq7uAVKZVJR/IpdR1CqP+e9mSqHW0n30kRO0Uij
-        orBaVthCigq8Jpoc696ECdsuBMeakZLGIcvzjCR48tcPPN/w8GwRgXiVeOErsulhJMJWzL9rQuDVMQSG
-        ajD9/CB3Ezxh9J1RCQavl2SbhVU5/wsdnl0iJKODiExrIc0asBi/AWTuAIttCPtqsLRgYcEULI0qwcDl
-        ZfFM0stFAk8u5k8ww9MBZBlcagPSV4CUAUjqEBjZz91b9JxWCZ4aS7yRGSsXc8j/qvwCvl/jNxsZ1AML
-        Wv7sU0C8DrOvq7i3oPukSuC5QLcc97dnAH/hP0MWGWrkA2kA6Sjw5TAQ2Qd83otcqBrRqSO4V68SuAxU
-        7dGXRrNJJ/qbWJC2MXSgACC8BwjtBoI7gI88wZ2Iv9mK9uMqQT5uwwrbkLkSDoEFCXNhEZ+2MbSFp4Lv
-        NyM2vgF++zo4W8rQUUchBf0Zh45q3cIa2XaOBZKJoY0MlSM2sha+rpUQhOW5Pg3FeuvJpSC/Z0BYLz/Q
-        EtKTVfB1lqFfKJWtGprr1ZBd1FO5slY83psVh9prSepsoEDXCbqtPP6XIfoBfzKrezGGzKIAAAAASUVO
+        yqsupIs+iBKhLGcF0qidXM1anzO8iD6YpqZsRtuwffQhhyyzqWSzi/xYqzkdjbazldt0O+3p3TrBgRp0
+        Uw+8HM553t/v/A+H/ltGWuixp5ngOk94pCd0N9Bdpfq7uAVKZVJR/IpdR1CqP+e9mSqHWkj30kRO0Ugj
+        orBSVthCigq8JpoY7dqAcdsOBEfPISWNQZbnGEnw5K8feL7h4ekiAvEq8cJXZNNDSIStmHvXhMCrIwgM
+        1mDq+X7uxnnC6D2lEgxcL8meFVbk/C90eHaJkIwOIDKlhTRjwEL8BpC5Ayy0IuyrweK8hQWTsDSqBP2X
+        l8QzSS8XCTy5mD/BNE87kGVwsRVIXwFSBiCpQ2B4L3dv0X1SJXhqLPFGpq1czCL/q/IL+H6N32xkUA/M
+        a/mzTwDxOsy8ruLegq7jKoHnAt1y3N+aAfyF/wxZZKiRD6QBpMPAl4NAZA/weTdyoWpEJw/hXr1K4DJQ
+        tUdfGs0mnehrYkHaxtC+AoDwLiC0EwhuAz7yBLcj/mYz2o6qBPm4Dctsg+ZKOAQWJMyFRXzawtAmngq+
+        34jY2Dr47WvgbC5Dex2FFPRnHDqqdQurZNsZFkgmhtYzVI7Y8Gr4OpdDEJbmejUU66knl4L8nn5hrfxA
+        S0hPVMHXUYY+oVS2ami2R0N2UU/lylrxeG9WHGirJamjgQKdx+i28vhfhugHd6+reANaJp8AAAAASUVO
         RK5CYII=
 </value>
   </data>
@@ -175,14 +175,14 @@
   <data name="cutToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG2SURBVDhPYxi8YMGCBQ8aGhraoVzSwfJlS//PmTPnX21t
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG2SURBVDhPYxi8YMGCBQ8aGhraoVzSwfJlS//PnDnzX21t
         dQVUiDSwcOHCD/+BIC0t7QFUiDQwbdrUeyAD0tPTX0GFSAMTenpufPjw4X9GRsYXqBCDZNFTEZGE46oM
-        xjNZoUIQMGP6tB/19fX/Zs2a9WbqxIlXJk2atGf5smX/r1279t/e3v5vw5RFjVVbvz8NqJ/5TyZ553/B
+        xjNZoUIQMGP6tB/19fX/Zs2a9WbqxIlXJk2atGf5smX/r1279t/e3v5vw5RFjVVbvz8NqJ/2TyZ553/B
         sM0v2T3WO0O1MzD093Udf/v2LcjFYPDjx4//S5cs/j918oT/WSnx/9v3vv5vUnvqP4vl3E1yKTt8rHpu
-        vGFxXPkIqh0Cent79gL9+764uOhXeXn5v8LCwlP2M7f9TZh54r9j/bR/0jHb/vO6L8uTTNvElbH6zQtm
-        +7U/oVqxA62Oh/EV2z/8l4/d+l+7tuefZumxZ9Kpu/8H1M/75z/93n9Gi1n7oEqxg5KNn96yuCx/zOG4
+        vGFxXPkIqh0Cent79gL9+764uOhXeXn5v8LCwlP2M7f9TZh54r9j/eR/0jHb/vO6L8uTTNvElbH6zQtm
+        +7U/oVqxA62Oh/EV2z/8l4/d+l+7tvOfZumxZ9Kpu/8H1M/+5z/93n9Gi1n7oEqxg5KNn96yuCx/zOG4
         wg7kZ5mUvas4XVd0sLuuWsNsu3gaA8MqZqhS7MBn4u1ngn4bDoDYEfOf3OYN2PIaLEEsEAzfu1g0a//P
-        9M0fHtov3v+X3XH1JagUcYDbaaM4q/OinTyBS78yWc69yW61ThkqRU3AwAAAONfP1QY3I3YAAAAASUVO
+        9M0fHtov3v+X3XH1JagUcYDbaaM4q/OinTyBS78yWc69yW61ThkqRU3AwAAACOzPwNR8BKYAAAAASUVO
         RK5CYII=
 </value>
   </data>
@@ -204,17 +204,17 @@
   <data name="pasteToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVDhPtZLdT1JhHMf5H7qrjVZdOLda1144L1wjsfX+
-        sl7catWFd03Nraaj3EimtXMTJIggCDoblTiRIIl4awMLQbtoCeSQqVNeIg4dJoe+nbeNDLtp67t9d86e
-        7fN9nt/3eUT/TQRB1KnV6iWNRhNRKBRiYfnvKj890lw2SeaLJmk+pmoj3W5nJR6PI5lMIvLWQseUDeR3
-        RX0+P1g/vyEXNwtYVeUJabjibAPC7XA5pkHTNCiK4sz+z9mngJmTKD8/hvSTA2EBq6pgbiXxoR0I3UTv
-        3dsYeNQLRd99zgPyHvTcuQFYW4EpKTZlB0kBq6qgaiERvAW8v87bew1wXwbeXABen+V2x/QJLiQmE+8W
-        ICERYEAfMwYLv7sCrVoJ89goTEY9jKM6GHRa6LRaZl0DglCuCCivgqqBhPcqvytr1yWYTQb8KaYOlEpA
-        U1NTRUB5fRtq/MGBcxd5O8/DNKZHoVDGwkIei4tF+P0J2Gx+RKMrtQE54ijFzes4x89sP8Mdm1UmU0I2
-        u4319SISiRzW1ujagCwbwIK2U7yZ0gz6EQak4XLl4PORsNvjmJz0IBhM1AakicPU702z18UWtrW1Dbd7
-        A15vGg7HMiwWD0KhXUZID9ZRHPjyOO8XEowMDzMvsQirNYLZ2U/MN4jx8Rmmiy+1AZv9h6IlYyMPv2rh
-        AjRDWqRSzK16lxEIxOHxfIbT+ZEpNVMb8PXentMTsv0/U31irD7ch9UHe/HssRxdXd3o7Nzpjo5uyGT9
-        O9/Bv0kk+gX4I/XsZjVM8gAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVDhPtZLdT1JhHMf5H7qrjVZdOLda1144LlwjsfX+
+        sl7catWFd03Nraaj3EimtXMTJIggeLDZqMSJBEnEWxtYCNZFSyCHTJ3yEnHoMIG+nbeNDLtp67t9d86e
+        7fN9nt/3eUT/TQRBNGg0mo9arTaiVCrFwvLfVX58qKVMSueLpCwfU7dTbrezGo/HkUwmEXljqcRUTdR3
+        ZWM+P9Q4v64QtwhYTeWnsnDV2Q6EO+ByTKNSqYCmac7s/5x9Cpg5jvKzI0g/2hcWsJoK5jYK7zuA0HX0
+        3b6JwQd9UPbf5Tyo6EXvrWuAtQ2YkmFDvp8SsJoK6lYKwRvAu6u8vVcA90Xg9Tng1Wlud0wf40JicvFO
+        AVIKAQb0MWOw8NtL0GlUMI+PgTQZYBrTw6jXQa/TMetaEIRqWUB5FdRNFLyX+V1Zuy7ATBrxp5g6UCoB
+        EomkKqC8vg03/+DAufO8nWdBjhtQKJSxsJDH4mIRfn8CNpsf0ehyfUCOOExz8zrO8DPbT3HHZpXJlJDN
+        bmFtrYhEIofV1Up9QJYNYEHbCd5MaUbDKANW4HLl4PNRsNvjmJz0IBhM1AekiYP0702z18UWtrm5Bbd7
+        HV5vGg7HEiwWD0KhHUZIDzXQHPjiKO/nUoyOjDAvsQirNYLZ2U/MN4iJiRmmiy/1ARsDB6IlUzMPv2zl
+        ArTDOqRSzK16lxAIxOHxfIbT+YEpNVMf8PXOrpOkfO/PVL8YK/f3YOXebjx5qEB3dw+6ura7s7MHcvnA
+        9nfwbxKJfgH2xPXpjnXfIgAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -240,15 +240,15 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIuSURBVDhPvZFdSFNxGMbflKALoS666Cbo1iAo8iovCqIu
-        yqsupIs+iBKhLGcF0qgdnM1anzO8iD6YpqZsRtuwffQhhyyzqWSzi/xYqzkdjbazldt0O+3p3TrBgRp0
-        Uw+8HM553t/v/A+H/ltGW+mxp4XgOk94pCf0NNBdpfq7uAVKZVJR/IpdR1CqP+e9mSqHW0n30kRO0Uij
-        orBaVthCigq8Jpoc696ECdsuBMeakZLGIcvzjCR48tcPPN/w8GwRgXiVeOErsulhJMJWzL9rQuDVMQSG
-        ajD9/CB3Ezxh9J1RCQavl2SbhVU5/wsdnl0iJKODiExrIc0asBi/AWTuAIttCPtqsLRgYcEULI0qwcDl
-        ZfFM0stFAk8u5k8ww9MBZBlcagPSV4CUAUjqEBjZz91b9JxWCZ4aS7yRGSsXc8j/qvwCvl/jNxsZ1AML
-        Wv7sU0C8DrOvq7i3oPukSuC5QLcc97dnAH/hP0MWGWrkA2kA6Sjw5TAQ2Qd83otcqBrRqSO4V68SuAxU
-        7dGXRrNJJ/qbWJC2MXSgACC8BwjtBoI7gI88wZ2Iv9mK9uMqQT5uwwrbkLkSDoEFCXNhEZ+2MbSFp4Lv
-        NyM2vgF++zo4W8rQUUchBf0Zh45q3cIa2XaOBZKJoY0MlSM2sha+rpUQhOW5Pg3FeuvJpSC/Z0BYLz/Q
-        EtKTVfB1lqFfKJWtGprr1ZBd1FO5slY83psVh9prSepsoEDXCbqtPP6XIfoBfzKrezGGzKIAAAAASUVO
+        yqsupIs+iBKhLGcF0qidXM1anzO8iD6YpqZsRtuwffQhhyyzqWSzi/xYqzkdjbazldt0O+3p3TrBgRp0
+        Uw+8HM553t/v/A+H/ltGWuixp5ngOk94pCd0N9Bdpfq7uAVKZVJR/IpdR1CqP+e9mSqHWkj30kRO0Ugj
+        orBSVthCigq8JpoY7dqAcdsOBEfPISWNQZbnGEnw5K8feL7h4ekiAvEq8cJXZNNDSIStmHvXhMCrIwgM
+        1mDq+X7uxnnC6D2lEgxcL8meFVbk/C90eHaJkIwOIDKlhTRjwEL8BpC5Ayy0IuyrweK8hQWTsDSqBP2X
+        l8QzSS8XCTy5mD/BNE87kGVwsRVIXwFSBiCpQ2B4L3dv0X1SJXhqLPFGpq1czCL/q/IL+H6N32xkUA/M
+        a/mzTwDxOsy8ruLegq7jKoHnAt1y3N+aAfyF/wxZZKiRD6QBpMPAl4NAZA/weTdyoWpEJw/hXr1K4DJQ
+        tUdfGs0mnehrYkHaxtC+AoDwLiC0EwhuAz7yBLcj/mYz2o6qBPm4Dctsg+ZKOAQWJMyFRXzawtAmngq+
+        34jY2Dr47WvgbC5Dex2FFPRnHDqqdQurZNsZFkgmhtYzVI7Y8Gr4OpdDEJbmejUU66knl4L8nn5hrfxA
+        S0hPVMHXUYY+oVS2ami2R0N2UU/lylrxeG9WHGirJamjgQKdx+i28vhfhugHd6+reANaJp8AAAAASUVO
         RK5CYII=
 </value>
   </data>
@@ -274,14 +274,14 @@
   <data name="cutToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG2SURBVDhPYxi8YMGCBQ8aGhraoVzSwfJlS//PmTPnX21t
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG2SURBVDhPYxi8YMGCBQ8aGhraoVzSwfJlS//PnDnzX21t
         dQVUiDSwcOHCD/+BIC0t7QFUiDQwbdrUeyAD0tPTX0GFSAMTenpufPjw4X9GRsYXqBCDZNFTEZGE46oM
-        xjNZoUIQMGP6tB/19fX/Zs2a9WbqxIlXJk2atGf5smX/r1279t/e3v5vw5RFjVVbvz8NqJ/5TyZ553/B
+        xjNZoUIQMGP6tB/19fX/Zs2a9WbqxIlXJk2atGf5smX/r1279t/e3v5vw5RFjVVbvz8NqJ/2TyZ553/B
         sM0v2T3WO0O1MzD093Udf/v2LcjFYPDjx4//S5cs/j918oT/WSnx/9v3vv5vUnvqP4vl3E1yKTt8rHpu
-        vGFxXPkIqh0Cent79gL9+764uOhXeXn5v8LCwlP2M7f9TZh54r9j/bR/0jHb/vO6L8uTTNvElbH6zQtm
-        +7U/oVqxA62Oh/EV2z/8l4/d+l+7tuefZumxZ9Kpu/8H1M/75z/93n9Gi1n7oEqxg5KNn96yuCx/zOG4
+        vGFxXPkIqh0Cent79gL9+764uOhXeXn5v8LCwlP2M7f9TZh54r9j/eR/0jHb/vO6L8uTTNvElbH6zQtm
+        +7U/oVqxA62Oh/EV2z/8l4/d+l+7tvOfZumxZ9Kpu/8H1M/+5z/93n9Gi1n7oEqxg5KNn96yuCx/zOG4
         wg7kZ5mUvas4XVd0sLuuWsNsu3gaA8MqZqhS7MBn4u1ngn4bDoDYEfOf3OYN2PIaLEEsEAzfu1g0a//P
-        9M0fHtov3v+X3XH1JagUcYDbaaM4q/OinTyBS78yWc69yW61ThkqRU3AwAAAONfP1QY3I3YAAAAASUVO
+        9M0fHtov3v+X3XH1JagUcYDbaaM4q/OinTyBS78yWc69yW61ThkqRU3AwAAACOzPwNR8BKYAAAAASUVO
         RK5CYII=
 </value>
   </data>
@@ -303,24 +303,65 @@
   <data name="pasteToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVDhPtZLdT1JhHMf5H7qrjVZdOLda1144L1wjsfX+
-        sl7catWFd03Nraaj3EimtXMTJIggCDoblTiRIIl4awMLQbtoCeSQqVNeIg4dJoe+nbeNDLtp67t9d86e
-        7fN9nt/3eUT/TQRB1KnV6iWNRhNRKBRiYfnvKj890lw2SeaLJmk+pmoj3W5nJR6PI5lMIvLWQseUDeR3
-        RX0+P1g/vyEXNwtYVeUJabjibAPC7XA5pkHTNCiK4sz+z9mngJmTKD8/hvSTA2EBq6pgbiXxoR0I3UTv
-        3dsYeNQLRd99zgPyHvTcuQFYW4EpKTZlB0kBq6qgaiERvAW8v87bew1wXwbeXABen+V2x/QJLiQmE+8W
-        ICERYEAfMwYLv7sCrVoJ89goTEY9jKM6GHRa6LRaZl0DglCuCCivgqqBhPcqvytr1yWYTQb8KaYOlEpA
-        U1NTRUB5fRtq/MGBcxd5O8/DNKZHoVDGwkIei4tF+P0J2Gx+RKMrtQE54ijFzes4x89sP8Mdm1UmU0I2
-        u4319SISiRzW1ujagCwbwIK2U7yZ0gz6EQak4XLl4PORsNvjmJz0IBhM1AakicPU702z18UWtrW1Dbd7
-        A15vGg7HMiwWD0KhXUZID9ZRHPjyOO8XEowMDzMvsQirNYLZ2U/MN4jx8Rmmiy+1AZv9h6IlYyMPv2rh
-        AjRDWqRSzK16lxEIxOHxfIbT+ZEpNVMb8PXentMTsv0/U31irD7ch9UHe/HssRxdXd3o7Nzpjo5uyGT9
-        O9/Bv0kk+gX4I/XsZjVM8gAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVDhPtZLdT1JhHMf5H7qrjVZdOLda1144LlwjsfX+
+        sl7catWFd03Nraaj3EimtXMTJIggeLDZqMSJBEnEWxtYCNZFSyCHTJ3yEnHoMIG+nbeNDLtp67t9d86e
+        7fN9nt/3eUT/TQRBNGg0mo9arTaiVCrFwvLfVX58qKVMSueLpCwfU7dTbrezGo/HkUwmEXljqcRUTdR3
+        ZWM+P9Q4v64QtwhYTeWnsnDV2Q6EO+ByTKNSqYCmac7s/5x9Cpg5jvKzI0g/2hcWsJoK5jYK7zuA0HX0
+        3b6JwQd9UPbf5Tyo6EXvrWuAtQ2YkmFDvp8SsJoK6lYKwRvAu6u8vVcA90Xg9Tng1Wlud0wf40JicvFO
+        AVIKAQb0MWOw8NtL0GlUMI+PgTQZYBrTw6jXQa/TMetaEIRqWUB5FdRNFLyX+V1Zuy7ATBrxp5g6UCoB
+        EomkKqC8vg03/+DAufO8nWdBjhtQKJSxsJDH4mIRfn8CNpsf0ehyfUCOOExz8zrO8DPbT3HHZpXJlJDN
+        bmFtrYhEIofV1Up9QJYNYEHbCd5MaUbDKANW4HLl4PNRsNvjmJz0IBhM1AekiYP0702z18UWtrm5Bbd7
+        HV5vGg7HEiwWD0KhHUZIDzXQHPjiKO/nUoyOjDAvsQirNYLZ2U/MN4iJiRmmiy/1ARsDB6IlUzMPv2zl
+        ArTDOqRSzK16lxAIxOHxfIbT+YEpNVMf8PXOrpOkfO/PVL8YK/f3YOXebjx5qEB3dw+6ura7s7MHcvnA
+        9nfwbxKJfgH2xPXpjnXfIgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>367, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADm
+        BwAAAk1TRnQBSQFMAgEBAgEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEAEP8wABD/MAAC/wEH
+        Cu8B8AL/MAAC/wGaCXoBeQHvAv8wAAL/AaACmgh6Ae8C/w8AAf8gAAL/AaADmgd6Ae8C/zAAAv8BoAWa
+        BXoB7wL/MAAC/wHDB5oDegHvAv8wAAL/AcMImgJ6Ae8C/zAAAv8BwwGgCJoBegHvAv8wAAL/A8MCoAaa
+        AQcC/zAAAv8BGgGgAcMCoAGaAfMH/zAAAv8BGwSZAfQI/zAAEP8wABD/MAAQ/zAAAUIBTQE+BwABPgMA
+        ASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8DAAL/BgAC/wYAAv8GAAGAAQEGAAH/Af4GAAGAAQEGAAL/
+        BgABgAEBBgAC/wYAAYABAQYAAv8GAAGAAQEGAAL/BgABgAEBBgAC/wYAAv8EAAs=
 </value>
   </data>
   <metadata name="kryptonManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>225, 17</value>
-  </metadata>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>367, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>59</value>
